Fix white spaces

--- a/www.threefoldtoken.com/themes/landing/static/css/custom.css
+++ b/www.threefoldtoken.com/themes/landing/static/css/custom.css
@@ -864,7 +864,7 @@ a {
 }
 
 .rj-team {
-    padding-bottom: 20em
+    padding-bottom: 10rem
 }
 
 .rj-team .rj-team-member .rj-team-member-info-text {
